Small fixes to close <a> tag and remove error in markdown fixed form text alignment

--- a/docs/style/style.css
+++ b/docs/style/style.css
@@ -713,6 +713,9 @@ input, textarea{
     background-color: inherit;
     border: solid darkgray 1px;
 }
+.form-control {
+    text-align: left;
+}
 .copyright {
    position: relative;
    left: 0;
